# quant_cast_bench

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/: NOTICE.md
benchmarks/: README.md  bench_results.csv  benchmark.py  plot_bench.py
experiments/four_over_six/: four_over_six.py  test.py
experiments/transpose/: benchmark.py  test.py  transpose_cute.py  transpose_cute_v2.py  transpose_triton.py
flexquant/: README.md  api.py  api_triton_for_debugging.py  benchmark.py  example.py  recipe_debug_triton.py  recipes.py  swizzle.py  test.py
flexquant/hop/: __init__.py  inductor_lowering.py  template_128_128.py.jinja  template_1_128_dim_m.py.jinja
flexquant/plans/: nvfp4_mlsk.md
flexquant_v2/: FINDINGS.md  main.py  test.py
flexquant_v3/: README.md  api.py  recipes.py  test.py
quant_cast_bench/: benchmark.py
quant_cast_bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
quant_cast_bench/flex_tile_map/: api.py  recipes.py  utils.py
quant_cast_bench/flexquant/: README.md  api.py  api_triton_for_debugging.py  benchmark.py  example.py  nvfp4_utils.py  recipe_debug_triton.py  recipes.py  triton_kernels.py
quant_cast_bench/flexquant/hop/: hop.py  (+1 more)
quant_cast_bench/flexquant_v3/: api.py  recipes.py
quant_cast_bench/quant_cast_cute/: recipes.py
quant_cast_cute/: recipes.py  test.py
quant_cast_gold/: README.md  recipes.py  test.py  utils.py
quant_cast_triton/: recipes.py  test.py
test/: test_flex_tile_map.py  test_flexquant.py  test_flexquant_v3.py  test_quant_cast_cute.py  test_quant_cast_gold.py  test_quant_cast_triton.py
(+13 files in other folders)
