[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quant_cast_bench"
version = "0.0.1"
description = "Reference recipes and benchmarks for single-kernel quantization casts (fp8 / mxfp8 / nvfp4)."
requires-python = ">=3.10"
# torch / triton / nvidia-cutlass-dsl are environment-provided (CUDA nightly), so they are not
# pinned here; only the light pure-Python deps used by the benchmark/flexquant are declared.
dependencies = ["fire", "tabulate", "jinja2"]

[tool.setuptools.packages.find]
include = ["quant_cast_bench*"]
